@@ -1,2 +1,9 @@
 # code-demo-2022
 code-demo-2022
+
+使用jdk预览属性
+打印所有jvm参数
+使用ZGC
+--enable-preview
+-XX:+PrintFlagsFinal
+-XX:+UseZGC
